dev/bin/knative/istio_request_authentication.yml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-example"
  namespace: istio-system
spec:
  jwtRules:
  - issuer: "http://192.168.49.2:30007/auth/realms/event-bridge-fm"
    jwksUri: "http://keycloak.keycloak:8180/auth/realms/event-bridge-fm/protocol/openid-connect/certs"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: istio-system
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            methods:
              - POST
            paths:
              - /default/ob-32abd
      when:
        - key: 'request.auth.claims[sub]'
          values:
            - 1608dc1f-4139-49c5-ae22-afe73ed807d7
